--- a/.github/workflows/auto-format-bot.yml
+++ b/.github/workflows/auto-format-bot.yml
@@ -12,7 +12,7 @@ jobs:
     # Only run on pull requests when the bot is mentioned
     if: |
       github.event.issue.pull_request &&
-      contains(github.event.comment.body, '@lucene-format-bot')
+      contains(github.event.comment.body, '/format-fix apply')
     runs-on: ubuntu-latest
     timeout-minutes: 30
 
