--- a/build-tools/build-infra-shadow/build.gradle
+++ b/build-tools/build-infra-shadow/build.gradle
@@ -60,7 +60,8 @@ tasks.matching {
     "validateJarChecksums",
     "validateJarLicenses",
     "collectJarInfos",
-    "compileJava",
+    // we do need to compile the sources so that forbidden apis are applied (?)
+    // "compileJava",
     "compileTestJava",
     "assemble"
   ]
