--- a/build-tools/build-infra/src/main/groovy/lucene.root-project.setup.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.root-project.setup.gradle
@@ -15,17 +15,12 @@
  * limitations under the License.
  */
 
-import com.carrotsearch.gradle.buildinfra.buildoptions.BuildOptionValueSource
 import com.carrotsearch.gradle.buildinfra.buildoptions.BuildOptionsPlugin
-import org.apache.lucene.gradle.plugins.gitgrep.GitGrepPlugin
-import org.apache.lucene.gradle.plugins.gitinfo.GitInfoPlugin
 import org.apache.lucene.gradle.plugins.astgrep.AstGrepPlugin
 import org.apache.lucene.gradle.plugins.eclint.EditorConfigLintPlugin
+import org.apache.lucene.gradle.plugins.gitgrep.GitGrepPlugin
+import org.apache.lucene.gradle.plugins.gitinfo.GitInfoPlugin
 import org.apache.lucene.gradle.plugins.globals.RegisterBuildGlobalsPlugin
-import com.carrotsearch.randomizedtesting.SeedUtils
-
-import java.time.ZonedDateTime
-import java.time.format.DateTimeFormatter
 
 // Prepare the root project and some global infrastructure.
 
@@ -48,6 +43,31 @@ plugins.apply(GitInfoPlugin)
 plugins.apply(GitGrepPlugin)
 plugins.apply(AstGrepPlugin)
 plugins.apply(EditorConfigLintPlugin)
+
+//
+// Register this utility task on the root project.
+//
+tasks.register("checkJdkInternalsExportedToGradle", {
+  doFirst {
+    def jdkCompilerModule = ModuleLayer.boot().findModule("jdk.compiler").orElseThrow()
+    def gradleModule = getClass().module
+    def internalsExported = [
+      "com.sun.tools.javac.api",
+      "com.sun.tools.javac.file",
+      "com.sun.tools.javac.parser",
+      "com.sun.tools.javac.tree",
+      "com.sun.tools.javac.util"
+    ].stream()
+    .allMatch({pkg -> jdkCompilerModule.isExported(pkg, gradleModule)})
+
+    if (!internalsExported) {
+      throw new GradleException(
+      "Certain gradle tasks and plugins require access to jdk.compiler" +
+      " internals, your gradle.properties might have just been generated or could be" +
+      " out of sync (see gradle/template.gradle.properties)")
+    }
+  }
+})
 
 //
 // Expose parts of the final project version to the build. We can't use Runtime.Version, sadly.
@@ -76,11 +96,11 @@ ext {
 }
 
 // Wire up included builds to some validation tasks.
-tasks.matching { it.name == "tidy" }.configureEach {
+tasks.matching {it.name == "tidy"}.configureEach {
   dependsOn gradle.includedBuilds*.task(":tidy")
 }
 
-tasks.matching { it.name == "check" }.configureEach {
+tasks.matching {it.name == "check"}.configureEach {
   dependsOn gradle.includedBuilds*.task(":check")
 }
 
@@ -99,7 +119,7 @@ buildOptions.addOption("lucene.tool.python3", "External python3 executable (path
 buildOptions.addOption("lucene.tool.perl", "External perl executable (path or name)", "perl")
 buildOptions.addOption("lucene.tool.git", "External git executable (path or name)", "git")
 
-ext.externalTool = { String name ->
+ext.externalTool = {String name ->
   if (name in [
         "python3",
         "perl",
@@ -110,9 +130,9 @@ ext.externalTool = { String name ->
   throw new GradleException("External tool named '${name}' is not defined.")
 }
 
-
 interface InjectedExec {
-  @Inject ExecOperations getOps()
+  @Inject
+  ExecOperations getOps()
 }
 
 // TODO: These utility methods should be moved somewhere else or removed.
@@ -120,7 +140,7 @@ allprojects {
   ext {
     // Utility function similar to project.exec but not emitting
     // any output unless an error code is returned from the executed command.
-    quietExec = { closure ->
+    quietExec = {closure ->
       // Resolve any properties against the provided closure.
       resolveStrategy = Closure.DELEGATE_ONLY
       delegate = closure.delegate
@@ -130,7 +150,7 @@ allprojects {
       boolean saveIgnoreExitValue
       ExecSpec saveExecSpec
 
-      outputFile.withOutputStream { output ->
+      outputFile.withOutputStream {output ->
         // we want to capture both stdout and stderr to the same
         // stream but gradle attempts to close these separately
         // (it has two independent pumping threads) and it can happen
@@ -143,7 +163,7 @@ allprojects {
             }
 
         def injected = project.objects.newInstance(InjectedExec)
-        result = injected.ops.exec { ExecSpec execSpec ->
+        result = injected.ops.exec {ExecSpec execSpec ->
           project.configure(execSpec, closure)
 
           saveIgnoreExitValue = execSpec.ignoreExitValue
@@ -175,7 +195,7 @@ allprojects {
     }
 
     // Convert a list of strings, tasks and task providers into resolved tasks or task providers.
-    resolveTaskRefs = { List<Object> refs ->
+    resolveTaskRefs = {List<Object> refs ->
       def resolved = refs.collect {
         if (it instanceof Task) return it
         if (it instanceof TaskProvider) return it
@@ -189,7 +209,7 @@ allprojects {
     // This method should not be required in 99% of cases, consider regular dependsOn links.
     // This method does NOT imply any ordering between dependencies of task on the input
     // list - the execution of these may still be unordered.
-    mustRunInOrder = { List<Object> taskList ->
+    mustRunInOrder = {List<Object> taskList ->
       project.afterEvaluate {
         def resolved = resolveTaskRefs(taskList)
 
