--- a/build-tools/build-infra/src/main/groovy/lucene.regenerate.extract-jdk-apis.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.regenerate.extract-jdk-apis.gradle
@@ -46,7 +46,7 @@ configure(project(":lucene:core")) {
           'file.encoding': 'UTF-8',
         ]
         args = [
-          rootProject.minJavaVersion.toString(),
+          buildGlobals.getMinJavaVersion().get().toString(),
           jdkVersion,
           apijars.file("jdk${jdkVersion}-api.jar"),
         ]
