--- a/build-tools/build-infra/src/main/groovy/lucene.regenerate.forUtil.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.regenerate.forUtil.gradle
@@ -19,14 +19,14 @@ import org.apache.lucene.gradle.plugins.misc.QuietExec
 
 // Regenerates "ForUtil.java" code used by codecs.
 
-configure(project(":lucene:core")) {
-  def generateForUtilInternal = tasks.register("generateForUtilInternal", QuietExec, {
-    description = "Regenerate gen_ForUtil.py"
+void addGenerateFromPythonTask(Project project, File genDir, String taskName, String pyScript, String javaFile) {
+  var generateTaskProvider = project.getTasks().register(
+      "generate" + taskName + "Internal", QuietExec, {
+    description = "Regenerate " + javaFile + " using " + pyScript + " in " + genDir
     group = "generation"
 
-    def genDir = file("src/java/org/apache/lucene/codecs/lucene103")
-    def genScript = file("${genDir}/gen_ForUtil.py")
-    def genOutput = file("${genDir}/ForUtil.java")
+    def genScript = project.file("${genDir}/${pyScript}")
+    def genOutput = project.file("${genDir}/${javaFile}")
     inputs.file genScript
     outputs.file genOutput
 
@@ -35,229 +35,40 @@ configure(project(":lucene:core")) {
     args = ['-B', genScript.toString()]
   })
 
-  regenerate.dependsOn wrapWithPersistentChecksums2(generateForUtilInternal, [
-    andThenTasks: [
-      "applyGoogleJavaFormat"
-    ],
-    mustRunBefore: ["compileJava"]
+  var wrapped = project.wrapWithPersistentChecksums2(generateTaskProvider, [
+      andThenTasks: [ "applyGoogleJavaFormat" ],
+      mustRunBefore: [ "compileJava" ]
   ])
 
-  task generateForDeltaUtilInternal() {
-    description = "Regenerate gen_ForDeltaUtil.py"
-    group = "generation"
-
-    def genDir = file("src/java/org/apache/lucene/codecs/lucene103")
-    def genScript = file("${genDir}/gen_ForDeltaUtil.py")
-    def genOutput = file("${genDir}/ForDeltaUtil.java")
-
-    inputs.file genScript
-    outputs.file genOutput
-
-    doLast {
-      quietExec {
-        workingDir genDir
-        executable project.externalTool("python3")
-        args = ['-B', genScript]
-      }
-    }
+  project.getTasks().named("regenerate").configure {
+    dependsOn wrapped
   }
+}
 
-  regenerate.dependsOn wrapWithPersistentChecksums(generateForDeltaUtilInternal, [
-    andThenTasks: [
-      "applyGoogleJavaFormat"
-    ],
-    mustRunBefore: ["compileJava"]
-  ])
+configure(project(":lucene:core")) {
+  addGenerateFromPythonTask(project,
+      file("src/java/org/apache/lucene/codecs/lucene103"), "ForUtil", "gen_ForUtil.py", "ForUtil.java")
+  addGenerateFromPythonTask(project,
+      file("src/java/org/apache/lucene/codecs/lucene103"), "ForDeltaUtil", "gen_ForDeltaUtil.py", "ForDeltaUtil.java")
 }
 
 configure(project(":lucene:backward-codecs")) {
+  addGenerateFromPythonTask(project,
+      file("src/java/org/apache/lucene/backward_codecs/lucene84"), "ForUtil84", "gen_ForUtil.py", "ForUtil.java")
 
-  task generateForUtil84Internal() {
-    description = "Regenerate gen_ForUtil.py"
-    group = "generation"
+  addGenerateFromPythonTask(project,
+      file("src/java/org/apache/lucene/backward_codecs/lucene90"), "ForUtil90", "gen_ForUtil.py", "ForUtil.java")
 
-    def genDir = file("src/java/org/apache/lucene/backward_codecs/lucene84")
-    def genScript = file("${genDir}/gen_ForUtil.py")
-    def genOutput = file("${genDir}/ForUtil.java")
+  addGenerateFromPythonTask(project,
+      file("src/java/org/apache/lucene/backward_codecs/lucene99"), "ForUtil99", "gen_ForUtil.py", "ForUtil.java")
 
-    inputs.file genScript
-    outputs.file genOutput
+  addGenerateFromPythonTask(project,
+      file("src/java/org/apache/lucene/backward_codecs/lucene912"), "ForUtil912", "gen_ForUtil.py", "ForUtil.java")
+  addGenerateFromPythonTask(project,
+      file("src/java/org/apache/lucene/backward_codecs/lucene912"), "ForDeltaUtil912", "gen_ForDeltaUtil.py", "ForDeltaUtil.java")
 
-    doLast {
-      quietExec {
-        workingDir genDir
-        executable project.externalTool("python3")
-        args = ['-B', genScript]
-      }
-    }
-  }
-
-  regenerate.dependsOn wrapWithPersistentChecksums(generateForUtil84Internal, [
-    andThenTasks: [
-      "applyGoogleJavaFormat"
-    ],
-    mustRunBefore: ["compileJava"]
-  ])
-
-  task generateForUtil90Internal() {
-    description = "Regenerate gen_ForUtil.py"
-    group = "generation"
-
-    def genDir = file("src/java/org/apache/lucene/backward_codecs/lucene90")
-    def genScript = file("${genDir}/gen_ForUtil.py")
-    def genOutput = file("${genDir}/ForUtil.java")
-
-    inputs.file genScript
-    outputs.file genOutput
-
-    doLast {
-      quietExec {
-        workingDir genDir
-        executable project.externalTool("python3")
-        args = ['-B', genScript]
-      }
-    }
-  }
-
-  regenerate.dependsOn wrapWithPersistentChecksums(generateForUtil90Internal, [
-    andThenTasks: [
-      "applyGoogleJavaFormat"
-    ],
-    mustRunBefore: ["compileJava"]
-  ])
-
-  task generateForUtil99Internal() {
-    description = "Regenerate gen_ForUtil.py"
-    group = "generation"
-
-    def genDir = file("src/java/org/apache/lucene/backward_codecs/lucene99")
-    def genScript = file("${genDir}/gen_ForUtil.py")
-    def genOutput = file("${genDir}/ForUtil.java")
-
-    inputs.file genScript
-    outputs.file genOutput
-
-    doLast {
-      quietExec {
-        workingDir genDir
-        executable project.externalTool("python3")
-        args = ['-B', genScript]
-      }
-    }
-  }
-
-  regenerate.dependsOn wrapWithPersistentChecksums(generateForUtil99Internal, [
-    andThenTasks: [
-      "applyGoogleJavaFormat"
-    ],
-    mustRunBefore: ["compileJava"]
-  ])
-
-  task generateForUtil912Internal() {
-    description = "Regenerate gen_ForUtil.py"
-    group = "generation"
-
-    def genDir = file("src/java/org/apache/lucene/backward_codecs/lucene912")
-    def genScript = file("${genDir}/gen_ForUtil.py")
-    def genOutput = file("${genDir}/ForUtil.java")
-
-    inputs.file genScript
-    outputs.file genOutput
-
-    doLast {
-      quietExec {
-        workingDir genDir
-        executable project.externalTool("python3")
-        args = ['-B', genScript]
-      }
-    }
-  }
-
-  regenerate.dependsOn wrapWithPersistentChecksums(generateForUtil912Internal, [
-    andThenTasks: [
-      "applyGoogleJavaFormat"
-    ],
-    mustRunBefore: ["compileJava"]
-  ])
-
-  task generateForDeltaUtil912Internal() {
-    description = "Regenerate gen_ForDeltaUtil.py"
-    group = "generation"
-
-    def genDir = file("src/java/org/apache/lucene/backward_codecs/lucene912")
-    def genScript = file("${genDir}/gen_ForDeltaUtil.py")
-    def genOutput = file("${genDir}/ForDeltaUtil.java")
-
-    inputs.file genScript
-    outputs.file genOutput
-
-    doLast {
-      quietExec {
-        workingDir genDir
-        executable project.externalTool("python3")
-        args = ['-B', genScript]
-      }
-    }
-  }
-
-  regenerate.dependsOn wrapWithPersistentChecksums(generateForDeltaUtil912Internal, [
-    andThenTasks: [
-      "applyGoogleJavaFormat"
-    ],
-    mustRunBefore: ["compileJava"]
-  ])
-
-  task generateForUtil101Internal() {
-    description = "Regenerate gen_ForUtil.py"
-    group = "generation"
-
-    def genDir = file("src/java/org/apache/lucene/backward_codecs/lucene101")
-    def genScript = file("${genDir}/gen_ForUtil.py")
-    def genOutput = file("${genDir}/ForUtil.java")
-
-    inputs.file genScript
-    outputs.file genOutput
-
-    doLast {
-      quietExec {
-        workingDir genDir
-        executable project.externalTool("python3")
-        args = ['-B', genScript]
-      }
-    }
-  }
-
-  regenerate.dependsOn wrapWithPersistentChecksums(generateForUtil101Internal, [
-    andThenTasks: [
-      "applyGoogleJavaFormat"
-    ],
-    mustRunBefore: ["compileJava"]
-  ])
-
-  task generateForDeltaUtil101Internal() {
-    description = "Regenerate gen_ForDeltaUtil.py"
-    group = "generation"
-
-    def genDir = file("src/java/org/apache/lucene/backward_codecs/lucene101")
-    def genScript = file("${genDir}/gen_ForDeltaUtil.py")
-    def genOutput = file("${genDir}/ForDeltaUtil.java")
-
-    inputs.file genScript
-    outputs.file genOutput
-
-    doLast {
-      quietExec {
-        workingDir genDir
-        executable project.externalTool("python3")
-        args = ['-B', genScript]
-      }
-    }
-  }
-
-  regenerate.dependsOn wrapWithPersistentChecksums(generateForDeltaUtil101Internal, [
-    andThenTasks: [
-      "applyGoogleJavaFormat"
-    ],
-    mustRunBefore: ["compileJava"]
-  ])
+  addGenerateFromPythonTask(project,
+      file("src/java/org/apache/lucene/backward_codecs/lucene101"), "ForUtil101", "gen_ForUtil.py", "ForUtil.java")
+  addGenerateFromPythonTask(project,
+      file("src/java/org/apache/lucene/backward_codecs/lucene101"), "ForDeltaUtil101", "gen_ForDeltaUtil.py", "ForDeltaUtil.java")
 }
