--- a/build-tools/build-infra/src/main/groovy/lucene.root-project.setup.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.root-project.setup.gradle
@@ -21,6 +21,7 @@ import org.apache.lucene.gradle.plugins.eclint.EditorConfigLintPlugin
 import org.apache.lucene.gradle.plugins.gitgrep.GitGrepPlugin
 import org.apache.lucene.gradle.plugins.gitinfo.GitInfoPlugin
 import org.apache.lucene.gradle.plugins.globals.RegisterBuildGlobalsPlugin
+import org.apache.lucene.gradle.plugins.regenerate.RegenerateTasksSupportPlugin
 
 // Prepare the root project and some global infrastructure.
 
@@ -39,6 +40,7 @@ plugins.apply(BasePlugin)
 
 plugins.apply(RegisterBuildGlobalsPlugin)
 
+plugins.apply(RegenerateTasksSupportPlugin)
 plugins.apply(GitInfoPlugin)
 plugins.apply(GitGrepPlugin)
 plugins.apply(AstGrepPlugin)
