Added quietExec utility method to build globals. Don't know how to get rid of it cleanly yet - it is used in reasonable code that calls several commands, sequentially.

--- a/build-tools/build-infra/src/main/groovy/lucene.documentation.render-javadoc.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.documentation.render-javadoc.gradle
@@ -534,12 +534,12 @@ abstract class RenderJavadocTask extends RenderJavadocTaskBase {
     def javadocCmd = project.file(executable.get())
     logger.info("Javadoc executable used: ${javadocCmd}")
 
-    project.quietExec {
+    buildGlobals.quietExec(this, {
       executable javadocCmd
 
       args += ["@${optionsFile}"]
       args += jOpts
-    }
+    })
 
     // append some special table css, prettify css
     ant.concat(destfile: "${outputDir}/stylesheet.css", append: "true", fixlastline: "true", encoding: "UTF-8") {
