--- a/build-tools/build-infra/src/main/groovy/lucene.regenerate.moman.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.regenerate.moman.gradle
@@ -56,11 +56,11 @@ configure(project(":lucene:core")) {
     doLast {
       templateFiles.each { prog ->
         logger.lifecycle("Executing: ${prog} in ${targetDir}")
-        quietExec {
+        buildGlobals.quietExec(it, {
           workingDir targetDir
           executable project.externalTool("python3")
           args = ['-B', "${prog}"]
-        }
+        })
       }
       // Correct line endings for Windows.
       project.ant.fixcrlf(
@@ -84,7 +84,7 @@ configure(project(":lucene:core")) {
     doLast {
       ['1', '2'].each { num ->
         ['True', 'False'].each { transpose ->
-          quietExec {
+          buildGlobals.quietExec(it, {
             workingDir targetDir
             executable project.externalTool("python3")
             args = [
@@ -94,7 +94,7 @@ configure(project(":lucene:core")) {
               transpose,
               "${momanDir}/finenight/python"
             ]
-          }
+          })
         }
       }
       project.ant.fixcrlf(
