--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+import org.apache.lucene.gradle.plugins.misc.CheckEnvironmentPlugin
 import org.apache.lucene.gradle.plugins.spotless.GoogleJavaFormatPlugin
 
 /*
@@ -24,8 +25,6 @@ plugins {
 
   id "base"
   id "lucene.root-project.setup"
-
-  id "lucene.all-projects.conventions"
 
   id "lucene.help"
 
