fail 'gradle check' on unchecked slow vector api feature usage
slow vector features = operations that might be slow on particular
hardware.

unchecked = not guarded by a `if (Constants.HAS_XXX)` for use of the
potentially slow features.

--- a/gradle/validation/ast-grep/rules/vectors.yml
+++ b/gradle/validation/ast-grep/rules/vectors.yml
@@ -1,3 +1,5 @@
+# Special policing of vectorization sources to prevent performance traps!
+---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/ast-grep/ast-grep/refs/heads/main/schemas/java_rule.json
 id: illegal-incubator-usage
 language: java
@@ -18,3 +20,19 @@ rule:
 severity: error
 message: Incubator APIs must not be used
 note: Move logic to `PanamaVectorUtilSupport`
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/ast-grep/ast-grep/refs/heads/main/schemas/java_rule.json
+id: unchecked-slow-vector-feature
+language: java
+files:
+  - "**/internal/vectorization/**.java"
+rule:
+  all:
+    - matches: slow-vector-feature
+    - not:
+        inside:
+          matches: vector-feature-check
+          stopBy: end
+severity: error
+message: "Vector API feature `$IDENTIFIER` may be slow on some hardware"
+note: guard usage inside `if` with `Constants.HAS_<FEATURE>` check
