Ignore out file (intellij idea).

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ gradle/wrapper/gradle-wrapper.jar
 /.idea/
 #    IntelliJ creates this folder, ignore.
 /dev-tools/missing-doclet/out/
+/build-tools/build-infra/out/
 
 # Eclipse
 /.project
