--- a/gradle/validation/ast-grep/rules/java-patterns.yml
+++ b/gradle/validation/ast-grep/rules/java-patterns.yml
@@ -123,3 +123,20 @@ severity: error
 message: Public factory is missing @lucene.spi javadoc block tag.
 note: |
   Document with `@lucene.spi {@value #NAME}`
+---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/ast-grep/ast-grep/refs/heads/main/schemas/java_rule.json
+id: incubator-module-dependency
+language: java
+files:
+  - "**/module-info.java"
+rule:
+  kind: scoped_identifier
+  all:
+    - has:
+        field: scope
+        pattern: jdk
+    - has:
+        field: name
+        pattern: incubator
+severity: error
+message: Module dependency on incubator APIs
