build: add another test

--- a/gradle/validation/ast-grep/tests/java-patterns.yml
+++ b/gradle/validation/ast-grep/tests/java-patterns.yml
@@ -109,6 +109,7 @@ invalid:
     module org.apache.lucene.foo {
       requires jdk.incubator.something;
     }
+  - import jdk.incubator.something.SomethingElse;
 valid:
   - |
     module org.apache.lucene.foo {
