Fail 'gradle check' on unchecked slow vector api feature usage (by using forbiddenapis) (#14942)
* Ignore out file (intellij idea).

* Pass apijar to forbidden apis.

* Move import under the license.

* Workaround detection issues caused by classes with wrong packages on compile classpath

* Add Robert's signatures

* add comment

* Disable the "fail on missing classes" (no longer needed because all classes are on classpath)

* add link to forbiddenapis bug

* build: add incubator-module-dependency ast-grep check

* build: tweak forbidden apis message for FMA, suppress the wrapper fn

* build: add another test

---------

Co-authored-by: Uwe Schindler <uschindler@apache.org>
Co-authored-by: Robert Muir <rmuir@apache.org>

--- a/gradle/validation/ast-grep/tests/java-patterns.yml
+++ b/gradle/validation/ast-grep/tests/java-patterns.yml
@@ -102,3 +102,16 @@ valid:
     public abstract class X extends TokenizerFactory {}
   - |
     private class X extends TokenizerFactory {}
+---
+id: incubator-module-dependency
+invalid:
+  - |
+    module org.apache.lucene.foo {
+      requires jdk.incubator.something;
+    }
+  - import jdk.incubator.something.SomethingElse;
+valid:
+  - |
+    module org.apache.lucene.foo {
+      requires org.apache.lucene.bar;
+    }
