--- a/build-tools/build-infra/src/main/groovy/lucene.java.core.mrjar.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.java.core.mrjar.gradle
@@ -15,6 +15,8 @@
  * limitations under the License.
  */
 
+import de.thetaphi.forbiddenapis.gradle.CheckForbiddenApis
+
 // Produce an MR-JAR for panama vector implementations
 
 configure(project(":lucene:core")) {
@@ -29,9 +31,13 @@ configure(project(":lucene:core")) {
       configurations["main${jdkVersion}Implementation"].extendsFrom(configurations.maybeCreate("implementation"))
       dependencies.add("main${jdkVersion}Implementation", sourceSets.main.output)
 
-      tasks.named("compileMain${jdkVersion}Java").configure {
-        def apijar = apijars.file("jdk${jdkVersion}-api.jar")
+      def apijar = apijars.file("jdk${jdkVersion}-api.jar")
 
+      tasks.withType(CheckForbiddenApis).named("forbiddenApisMain${jdkVersion}").configure {
+        it.classpath = it.classpath + files(apijar)
+      }
+
+      tasks.named("compileMain${jdkVersion}Java").configure {
         // TODO: this depends on the order of argument configuration...
         int releaseIndex = options.compilerArgs.indexOf("--release")
         options.compilerArgs.removeAt(releaseIndex)
