Move srcdir redirection for build-infra-shadow earlier so that tasks that eagerly do something with the sourceset have a chance to work with the redirected path.

--- a/build-tools/build-infra/src/main/groovy/lucene.java.modules.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.java.modules.gradle
@@ -152,7 +152,7 @@ allprojects {
           }
         } else {
           // This combination simply does not make any sense (in my opinion).
-          throw GradleException("Test source set is modular and main source set is class-based, this makes no sense: " + project.path)
+          throw new GradleException("Test source set is modular and main source set is class-based, this makes no sense: " + project.path)
         }
       } else {
         if (mainIsModular) {
