Fix early resolution of git dir property which may not be available for source bundles.

--- a/lucene/distribution/build.gradle
+++ b/lucene/distribution/build.gradle
@@ -53,7 +53,7 @@ tasks.register("assembleSourceTgz", QuietExec, {
   workingDir = project.rootDir
 
   // An explicit GIT_DIR to prevent .git upward scanning if something goes wrong.
-  environment("GIT_DIR", gitInfoExt.getDotGitDir().get().asFile)
+  environment("GIT_DIR", "${gitInfoExt.getDotGitDir().get().asFile.toString()}")
 
   args += [
       "archive",
