--- a/lucene/core/build.gradle
+++ b/lucene/core/build.gradle
@@ -14,8 +14,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+import org.apache.lucene.gradle.plugins.mrjar.LuceneJavaCoreMrjarPlugin
 
-
+plugins.apply(LuceneJavaCoreMrjarPlugin)
 
 description = 'Lucene core library'
 
